fixed simulation engine choice on mac